# Nazh

./: .editorconfig  .gitattributes  .gitignore  .gitmessage  AGENTS.md  AI-Context.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
crates/ai/: AGENTS.md  Cargo.toml
crates/ai/bindings/: AiCompletionResponse.ts  AiMessage.ts  AiProviderUpsert.ts  AiTokenUsage.ts
crates/ai/src/: client.rs  config.rs  config_tests.rs  error.rs  lib.rs  service.rs  types.rs
crates/ai/src/client/: mod.rs  protocol.rs  provider_policy.rs  response.rs  stream.rs  tests.rs  types.rs
crates/connections/: AGENTS.md  Cargo.toml
crates/connections/bindings/: ConnectionHealthSnapshot.ts
crates/connections/src/: guard.rs  health.rs  lib.rs  policy.rs  tests.rs  types.rs  validation.rs
crates/connections/src/manager/: health_ops.rs  mod.rs  session.rs
crates/core/: AGENTS.md  Cargo.toml
crates/core/src/: ai.rs  cache.rs  context.rs  data.rs  error.rs  event.rs  guard.rs  ipc.rs  lib.rs  lifecycle.rs  lifecycle_tests.rs  node.rs  node_tests.rs  pin.rs  pin_tests.rs  plugin.rs  plugin_tests.rs  variables.rs
crates/core/src/variables/: events.rs  mod.rs  types.rs  value.rs
crates/core/tests/: pin_compat_contract.rs  pin_kind_contract.rs  pure_form_contract.rs
crates/dsl-compiler/: AGENTS.md  Cargo.toml
crates/dsl-compiler/src/: context.rs  error.rs  lib.rs  output.rs  safety.rs  validate.rs
crates/dsl-compiler/src/output/: builder.rs  guards.rs  json.rs  mod.rs  tests.rs
crates/dsl-compiler/src/safety/: action_rules.rs  interlock.rs  preconditions.rs  report.rs  state_graph.rs  template.rs
crates/dsl-core/: AGENTS.md  Cargo.toml
crates/dsl-core/src/: capability.rs  capability_tests.rs  connection.rs  connection_tests.rs  device.rs  error.rs  lib.rs  parser.rs  pin_mapping.rs  workflow.rs
crates/graph/: AGENTS.md  Cargo.toml
crates/graph/src/: deploy.rs  deploy_tests.rs  edge_window.rs  lib.rs  pin_validator.rs  pin_validator_tests.rs  runner.rs  runner_tests.rs  types.rs  types_variables_schema_tests.rs  variables_init.rs
crates/graph/src/pull/: collector.rs  collector_tests.rs  index.rs  memo.rs  mod.rs
crates/graph/src/topology/: classify.rs  mod.rs
crates/nazh-ai-core/: Cargo.toml
crates/nazh-ai-core/bindings/: AiCompletionRequest.ts
crates/nazh-ai-core/src/: client.rs  config.rs  lib.rs  service.rs  types.rs
crates/nazh-core/: .gitignore  Cargo.toml
crates/nazh-core/bindings/: DeployResponse.ts  ListNodeTypesResponse.ts
crates/nazh-core/src/: context.rs  data.rs  error.rs  event.rs  guard.rs  ipc.rs  lib.rs
crates/nodes-flow/: AGENTS.md  Cargo.toml
crates/nodes-flow/src/: code_node.rs  if_node.rs  lib.rs  loop_node.rs  passthrough.rs  rhai_node.rs  state_machine.rs  state_machine_tests.rs  switch_node.rs  try_catch.rs
crates/nodes-io/: AGENTS.md  Cargo.toml
crates/nodes-io/src/: bark_push.rs  capability_call.rs  debug_console.rs  device_signal_read.rs  http_client.rs  http_client_tests.rs  lib.rs  modbus_read.rs  mqtt_client.rs  native.rs  serial_trigger.rs  signal_decode.rs  sql_writer.rs  template.rs  timer.rs
crates/nodes-io/src/bark_push/: config.rs  metadata.rs  mod.rs  request.rs  tests.rs
crates/nodes-io/src/can/: can_read.rs  can_write.rs  filter.rs  frame.rs  hex.rs  mod.rs  session.rs
crates/nodes-io/src/capability_call/: executor.rs  protocol.rs
crates/nodes-io/src/device_event_trigger/: can_loop.rs  config.rs  mod.rs  modbus_loop.rs  mqtt_loop.rs  node.rs  orchestrator.rs  serial_loop.rs  tests.rs
crates/nodes-io/src/device_signal_read/: config.rs  mod.rs  reader.rs  reader_modbus.rs  reader_protocols.rs  tests.rs
crates/nodes-io/src/ethercat/: mod.rs  pdo_read.rs  pdo_write.rs  session.rs  status.rs
crates/nodes-io/src/human_loop/: config.rs  form.rs  mod.rs  node.rs  registry.rs  workflow_id.rs
crates/nodes-io/src/mqtt_client/: mod.rs  subscribe.rs  tests.rs
crates/nodes-io/src/serial_trigger/: frame.rs  loop.rs  mod.rs  tests.rs
crates/nodes-io/src/signal_decode/: decode.rs  mod.rs  tests.rs  types.rs
crates/nodes-pure/: AGENTS.md  Cargo.toml
crates/nodes-pure/src/: c2f.rs  lib.rs  lookup.rs  minutes_since.rs
crates/pipeline/: AGENTS.md  Cargo.toml
crates/pipeline/src/: lib.rs  runner.rs  types.rs
crates/scripting/: AGENTS.md  Cargo.toml
crates/scripting/src/: lib.rs  package.rs  scripting_tests.rs
crates/store/: AGENTS.md  Cargo.toml
crates/store/src/: batch.rs  capabilities.rs  config.rs  connection_private.rs  copilot.rs  deployment_audit.rs  device_assets.rs  embedding.rs  error.rs  global_variables.rs  handle.rs  history.rs  lib.rs  migrations.rs  observability.rs  variables.rs
crates/store/src/handle/: connection.rs  copilot.rs  mod.rs  observability.rs
crates/tauri-bindings/: AGENTS.md  Cargo.toml
crates/tauri-bindings/src/: copilot.rs  deployment_session.rs  export.rs  lib.rs  network.rs  observability.rs  runtime.rs  serial.rs  tests.rs  variables.rs  workflow.rs
src-tauri/: .taurignore  Cargo.toml  README.md  nazh-local.sqlite3  tauri.conf.json  test_serial
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: asset_files.rs  connection_resolver.rs  ethercat_esi.rs  events.rs  lib.rs  main.rs  observability.rs  registry.rs  runtime.rs  session_marker.rs  state.rs  util.rs  workspace.rs
src-tauri/src/asset_files/: io.rs  mod.rs  snapshots.rs  sources.rs  types.rs  versioning.rs
src-tauri/src/commands/: ai.rs  capabilities.rs  catalog.rs  connections.rs  copilot.rs  copilot_tools.rs  deployment_session.rs  devices.rs  dsl_compiler.rs  human_loop.rs  mod.rs  observability.rs  project_library.rs  runtime.rs  serial.rs  system.rs  variables.rs  workflow.rs  workflow_deploy.rs  workflow_deploy_helpers.rs  workflow_dispatch.rs  workflow_undeploy.rs
src-tauri/src/commands/devices/: assets.rs  (+5 more)
src-tauri/src/ethercat_esi/: eni_import.rs  esi_import.rs  mod.rs  types.rs  utils.rs
src-tauri/src/observability/: alerting.rs  jsonl.rs  mod.rs  store.rs  types.rs
src-tauri/tests/: ipc_surface_contract.rs
(+534 files in other folders)
