[workspace]
members = [".", "crates/core", "crates/pipeline", "crates/connections", "crates/scripting", "crates/nodes-flow", "crates/nodes-io", "crates/nazh-ai-core", "src-tauri"]
exclude = ["crates/nazh-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
authors = ["ssXue", "Niu Zhihong"]
repository = "https://github.com/ssXue/Nazh"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
nazh-core = { path = "crates/core" }
nazh-ai-core = { path = "crates/nazh-ai-core" }
pipeline = { path = "crates/pipeline" }
connections = { path = "crates/connections" }
scripting = { path = "crates/scripting" }
nodes-flow = { path = "crates/nodes-flow" }
nodes-io = { path = "crates/nodes-io" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
dashmap = "6"
futures-util = "0.3"
fastrand = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rhai = { version = "1", features = ["serde", "sync"] }
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-modbus = { version = "0.15", default-features = false, features = ["tcp"] }
rumqttc = { version = "0.24", features = ["use-rustls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "10", features = ["serde-compat", "serde-json-impl", "chrono-impl", "uuid-impl"] }
uuid = { version = "1", features = ["serde", "v4"] }

[package]
name = "nazh-engine"
description = "Industrial edge workflow runtime prototype for Nazh"
keywords = ["workflow", "edge-computing", "industrial", "dag", "orchestration"]
categories = ["asynchronous", "embedded"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "nazh_engine"
path = "src/lib.rs"

[[example]]
name = "phase1_demo"
path = "examples/phase1_demo.rs"

[dependencies]
nazh-core.workspace = true
nazh-ai-core.workspace = true
pipeline.workspace = true
connections.workspace = true
scripting.workspace = true
nodes-flow.workspace = true
nodes-io.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
ts-rs.workspace = true

[dev-dependencies]
async-trait.workspace = true
rusqlite.workspace = true
uuid.workspace = true

[profile.release]
lto = true
codegen-units = 1
strip = true
