[workspace]
members = [".", "crates/core", "crates/pipeline", "crates/connections", "crates/scripting", "crates/nodes-flow", "crates/nodes-io", "crates/nodes-pure", "crates/ai", "crates/graph", "crates/store", "crates/dsl-core", "crates/tauri-bindings", "src-tauri"]
exclude = ["crates/nazh-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
authors = ["ssXue", "Niu Zhihong"]
repository = "https://github.com/ssXue/Nazh"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"

[workspace.dependencies]
nazh-core = { path = "crates/core" }
nazh-engine = { path = "." }
ai = { path = "crates/ai" }
pipeline = { path = "crates/pipeline" }
connections = { path = "crates/connections" }
scripting = { path = "crates/scripting" }
nodes-flow = { path = "crates/nodes-flow" }
nodes-io = { path = "crates/nodes-io", default-features = false }
nodes-pure = { path = "crates/nodes-pure" }
nazh-graph = { path = "crates/graph" }
nazh-dsl-core = { path = "crates/dsl-core" }
store = { path = "crates/store" }
tauri-bindings = { path = "crates/tauri-bindings" }
arc-swap = "1"
async-trait = "0.1"
bitflags = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
dashmap = "6"
futures-util = "0.3"
fastrand = "2"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
rhai = { version = "1", features = ["serde", "sync"] }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-modbus = { version = "0.17", default-features = false, features = ["tcp"] }
tokio-util = { version = "0.7", default-features = false }
rumqttc = { version = "0.25.1", default-features = false, features = ["use-native-tls"] }
serialport = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ts-rs = { version = "12", features = ["serde-compat", "serde-json-impl", "chrono-impl", "uuid-impl"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[package]
name = "nazh-engine"
description = "Industrial edge workflow runtime prototype for Nazh"
keywords = ["workflow", "edge-computing", "industrial", "dag", "orchestration"]
categories = ["asynchronous", "embedded"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "nazh_engine"
path = "src/lib.rs"

[[example]]
name = "phase1_demo"
path = "examples/phase1_demo.rs"

[dependencies]
nazh-core.workspace = true
chrono.workspace = true
dashmap.workspace = true
ai.workspace = true
pipeline.workspace = true
connections.workspace = true
scripting.workspace = true
nodes-flow.workspace = true
nodes-pure.workspace = true
nazh-graph.workspace = true
# nodes-io 的协议 features 由 facade 重新导出（ADR-0018）。workspace dep 已经
# `default-features = false`；桌面默认通过 facade 的 io-all 元 feature 打开。
nodes-io.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
ts-rs = { workspace = true, optional = true }

[features]
# 桌面默认启用全部 IO 协议节点；嵌入式 / 边缘构建可：
#   `cargo build -p nazh-engine --no-default-features --features "io-mqtt,io-modbus"`
default = ["io-all"]

# ts-rs 类型导出。生产构建不启用，由 tauri-bindings 在 CI 中触发。
ts-export = [
    "dep:ts-rs",
    "nazh-core/ts-export",
    "connections/ts-export",
    "ai/ts-export",
    "nazh-graph/ts-export",
]

# ADR-0018：把 nodes-io 的 IO feature 提升到 facade 层，便于上游（src-tauri /
# 第三方应用）按需裁剪。**注意**：facade 自身也用 `#[cfg(feature = "io-*")]`
# 控制 protocol 节点的 re-export，因此 io-all 必须展开到每个 io-* 上，而不能
# 只委托给 nodes-io/io-all——后者只激活 nodes-io 内部的 cfg，对 facade 无效。
io-all = ["io-sql", "io-http", "io-mqtt", "io-modbus", "io-serial", "io-notify"]
io-sql = ["nodes-io/io-sql"]
io-http = ["nodes-io/io-http"]
io-mqtt = ["nodes-io/io-mqtt"]
io-modbus = ["nodes-io/io-modbus"]
io-serial = ["nodes-io/io-serial"]
io-notify = ["nodes-io/io-notify"]

[dev-dependencies]
async-trait.workspace = true
chrono.workspace = true
rusqlite.workspace = true
uuid.workspace = true

[profile.release]
lto = true
codegen-units = 1
strip = true
