[package]
name = "nazh-desktop"
description = "Tauri desktop shell for Nazh"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "nazh_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 桌面壳层走 facade 默认（`default = ["io-all"]`）；嵌入式构建可以在自定义二进制
# 目标里 `--no-default-features` 单独裁剪。
nazh-engine = { path = ".." }
tauri-bindings.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
# ADR-0009 后 src-tauri 仅用 serialport 做 list_serial_ports / test_serial_connection
# 等 IPC 命令；rumqttc / tokio-modbus 已完全交给 nodes-io，从依赖清单移除。
serialport.workspace = true
tauri = { version = "2", features = ["macos-private-api"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ai.workspace = true
uuid.workspace = true
store.workspace = true
nazh-dsl-core.workspace = true
dsl-compiler.workspace = true
serde_yaml.workspace = true
window-vibrancy = "0.7.1"
# PDF 文本提取（设备说明书录入）
pdf-extract = "0.7"
base64 = "0.22"
quick-xml = "0.39.2"
