[package]
name = "ai"
description = "Nazh AI 能力层：AiService trait、OpenAI 兼容 API 客户端与配置模型（Ring 1）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["stream"] }
futures-util.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ts-rs = { workspace = true, optional = true }
uuid.workspace = true

[features]
default = []
ts-export = ["dep:ts-rs"]

[dev-dependencies]
tokio.workspace = true
