[package]
name = "ai"
description = "Nazh AI 能力层（Ring 1）：OpenAI 兼容 API 客户端实现 + 壳层配置模型。AiService trait 在 nazh-core。"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nazh-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["stream"] }
futures-util.workspace = true
tokio.workspace = true
tracing.workspace = true
ts-rs = { workspace = true, optional = true }

[features]
default = []
ts-export = ["dep:ts-rs", "nazh-core/ts-export"]

[dev-dependencies]
tokio.workspace = true
