[package]
name = "ai"
description = "壳层 AI 配置模型（Ring 1）。AI HTTP 调用已前移到前端（RFC-0005）。"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nazh-core.workspace = true
serde.workspace = true
serde_json.workspace = true
ts-rs = { workspace = true, optional = true }

[features]
default = []
ts-export = ["dep:ts-rs", "nazh-core/ts-export"]
