[package]
name = "connections"
description = "Nazh 全局连接资源池（Ring 1）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nazh-core.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
ts-rs = { workspace = true, optional = true }
url.workspace = true

[features]
default = []
ts-export = ["dep:ts-rs", "nazh-core/ts-export"]
