[package]
name = "nazh-core"
description = "Nazh 引擎内核：Ring 0 类型定义与基础原语"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
bitflags.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
ts-rs = { workspace = true, optional = true }
uuid.workspace = true

[features]
default = []
# 启用 ts-rs 类型导出能力。
ts-export = ["dep:ts-rs"]

[dev-dependencies]
tokio.workspace = true
