[package]
name = "dsl-compiler"
description = "Workflow DSL → WorkflowGraph JSON 编译器（RFC-0004 Phase 3）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nazh-dsl-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
nazh-graph.workspace = true
serde_yaml.workspace = true
