[package]
name = "nazh-dsl-core"
description = "三段式 DSL 类型定义与 YAML 解析：Device / Capability / Workflow（RFC-0004 Phase 0）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nazh-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
