[package]
name = "nazh-graph"
description = "DAG 工作流编排：解析、校验、拓扑排序、部署与执行"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nazh-core.workspace = true
connections.workspace = true
chrono.workspace = true
dashmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
ts-rs = { workspace = true, optional = true }

[dev-dependencies]
async-trait.workspace = true
uuid.workspace = true

[features]
ts-export = ["dep:ts-rs", "nazh-core/ts-export"]
