[package]
name = "nazh-ai-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "Nazh AI 公共层：OpenAI 兼容 API 客户端与配置模型"
license = "MIT"
authors = ["Niu Zhihong"]
repository = "https://github.com/zhihongniu/Nazh"

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
thiserror = "1"
tokio = { version = "1", features = ["sync", "time"] }
tracing = "0.1"
ts-rs = { version = "10", features = ["serde-compat", "serde-json-impl"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
