[package]
name = "nazh-core"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
description = "Nazh 引擎内核：Ring 0 类型定义与基础原语"
license = "MIT"
authors = ["Niu Zhihong"]
repository = "https://github.com/zhihongniu/Nazh"

[lints]
workspace = true

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
dashmap = "6"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["sync", "time"] }
ts-rs = { version = "10", features = ["serde-compat", "serde-json-impl", "chrono-impl", "uuid-impl"] }
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
