[package]
name = "nodes-flow"
description = "Nazh 流程控制节点：if / switch / loop / tryCatch / rhai（Ring 1）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nazh-core.workspace = true
nazh-ai-core.workspace = true
scripting.workspace = true
async-trait.workspace = true
rhai.workspace = true
serde.workspace = true
serde_json.workspace = true
