[package]
name = "nodes-io"
description = "Nazh I/O 节点与模板引擎（Ring 1）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nazh-core.workspace = true
connections.workspace = true
async-trait.workspace = true
chrono.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-modbus.workspace = true
rumqttc.workspace = true
serialport.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
