[package]
name = "nodes-io"
description = "Nazh I/O 节点与模板引擎（Ring 1）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nazh-core.workspace = true
connections.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

# 协议依赖通过 io-* features 选择启用，便于边缘构建按需裁剪。
reqwest = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
tokio-modbus = { workspace = true, optional = true }
rumqttc = { workspace = true, optional = true }
serialport = { workspace = true, optional = true }

[features]
# 默认启用全部协议节点：保持桌面 / 工作站构建零回归。
# 边缘构建可 `--no-default-features --features "io-mqtt,io-modbus"` 等组合裁剪。
default = ["io-all"]

# 元 feature。`debug` / `native` / `timer` 与 `template` 工具永远启用，
# 不需要单独 feature——空声明在历史草案里出现过，落地时确认是死重去除。
io-all = ["io-sql", "io-http", "io-mqtt", "io-modbus", "io-serial", "io-notify"]

# 按协议门控
io-sql = ["dep:rusqlite"]
io-http = ["dep:reqwest"]
io-mqtt = ["dep:rumqttc"]
io-modbus = ["dep:tokio-modbus"]
io-serial = ["dep:serialport"]
io-notify = ["dep:reqwest"]
