[package]
name = "pipeline"
description = "Nazh 线性流水线抽象（Ring 1）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nazh-core.workspace = true
tokio.workspace = true
tracing.workspace = true
