[package]
name = "scripting"
description = "Nazh Rhai 脚本引擎基座（Ring 1）"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nazh-core.workspace = true
rhai.workspace = true
serde_json.workspace = true
